<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CD Vault</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="start_scanner">Start scanner</string>
    <string name="album_content_description">Album Thumbnail</string>
    <string name="dialog_title">Options</string>
    <string name="title_activity_edit_artist">Edit Artist</string>
    <string name="edit_artist">Edit artist</string>
    <string name="artist_name">Artist Name:</string>
    <string name="update">Update</string>
    <string name="save">Save to collection</string>
    <string name="title_activity_artists_album_list">Artist</string>
    <string name="scan_label">Scan CD barcode</string>
    <string name="scanner_icon_descripton">Scanner button</string>
    <string name="title_activity_track_list">TrackList</string>
    <string name="set_location">Set Location</string>
    <string name="title_activity_location_picker">Location</string>
	<string name="pick_location">Pick your location</string>
	<string name="title_activity_concerts_by_artist">Concerts by artist</string>
	<string name="album_check_label">Do I have this album?</string>
	<string name="search_icon_descripton">Search icon</string>
	<string name="album_art_descripton">Album art</string>
	<string name="enter_album_title">Enter album title</string>
	<string name="about_this_app">About this app</string>
	<string name="about_content">This app is to help you keep track of which albums you already own. Scan your CD barcode to save the album to your personal database.
	    \n\nIn addition, you can check out if any of the artists you listen to are coming to your town!
	    \n\nAlbum information is taken from www.discogs.com.
	    \n\nConcert information is taken from www.songkick.com</string>
</resources>