<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/scanLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/scan_label"
            android:textColor="@color/dark_grey"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/startScanner"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_below="@+id/scanLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/scanner_icon_descripton"
            android:src="@drawable/scan" />

        <TextView
            android:id="@+id/albumCheckLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startScanner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/album_check_label"
            android:textColor="@color/dark_grey"
            android:textSize="15sp"
            android:focusable="true" 
    		android:focusableInTouchMode="true" 
    		android:descendantFocusability="beforeDescendants"/>

        <EditText
            android:id="@+id/albumCheckInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/albumCheckLabel"
            android:layout_centerHorizontal="true"
            android:hint="@string/enter_album_title"
            android:inputType="text"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/albumCheckLabel"
            android:layout_toRightOf="@+id/albumCheckInput"
            android:background="@drawable/search"
            android:contentDescription="@string/search_icon_descripton" />

        <View
            android:id="@+id/divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/albumCheckInput"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/light_blue" />

        <TextView
            android:id="@+id/album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <ImageView
            android:id="@+id/albumArt"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/divider"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/album"
            android:contentDescription="@string/album_art_descripton" />

        <TextView
            android:id="@+id/tracks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/album"
            android:layout_marginLeft="5dp" />

        <Button
            android:id="@+id/saveAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tracks"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />
    </RelativeLayout>

</ScrollView>